@@ -1,5 +1,13 @@
 Changes with Apache 1.3.20
 
+  *) Correct a vulnerability in the Win32 and OS2 ports, by which a 
+     client submitting a carefully constructed URI could cause a GP
+     (segment) fault in the child process, which would have to be
+     cleared by the operator to resume operation.  This vulnerability
+     introduced no identified means to comprimize the server's data.
+     Reported by Auriemma Luigi <kaino3@genie.it>.
+     [William Rowe, Brian Harvard]
+
   *) Resolve the Win32 SSI exec cmd bug, where cmd was not executed
      appropriately against the shell.  [William Rowe]
 
